Soul Campfire Support + Lang File
Added lang, effect when standing on Soul Campfire.

--- a/build.gradle
+++ b/build.gradle
@@ -34,9 +34,11 @@ dependencies {
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	
-	// Soul Fire'd common import
-	implementation "it.crystalnest:soul-fire-d-common:$minecraft_version-$soul_fire_d_version"
-	
+	// Soul Fire'd Fabric
+	modImplementation "it.crystalnest:soul-fire-d-fabric:$minecraft_version-$soul_fire_d_version"
+
+    // Cobweb (dependency for Soul Fire'd)
+    modImplementation "it.crystalnest:cobweb-fabric:$minecraft_version-$cobweb_version"
 }
 
 processResources {
