--- a/gradle.properties
+++ b/gradle.properties
@@ -17,5 +17,8 @@ archives_base_name=soulscorch
 # Dependencies
 fabric_version=0.119.4+1.21.4
 
-# Soul Fire'D
+# Soul Fire'd
 soul_fire_d_version = 5.1.6
+
+# Cobweb
+cobweb_version = 1.3.3
