--- a/gradle.properties
+++ b/gradle.properties
@@ -20,5 +20,8 @@ fabric_version=0.119.4+1.21.4
 # Soul Fire'd
 soul_fire_d_version = 5.1.6
 
+# Terrablender Version
+terrablender_version = 4.3.0.2
+
 # Cobweb
 cobweb_version = 1.3.3
