--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,3 @@
-buildscript {
-    repositories {
-        maven { url = "https://maven.minecraftforge.net"}
-    }
-}
-
 plugins {
 	id 'fabric-loom' version "${loom_version}"
 	id 'maven-publish'
@@ -29,6 +23,8 @@ repositories {
 			includeGroup "it.crystalnest"
 		}
 	}
+
+    maven { url = 'https://maven.minecraftforge.net/' }
 }
 
 dependencies {
@@ -45,6 +41,8 @@ dependencies {
 
     // Cobweb (dependency for Soul Fire'd)
     modImplementation "it.crystalnest:cobweb-fabric:$minecraft_version-$cobweb_version"
+
+    modImplementation "com.github.glitchfiend:TerraBlender-fabric:$minecraft_version-$terrablender_version"
 
 }
 
@@ -78,6 +76,40 @@ jar {
 	}
 }
 
+loom {
+    runs {
+        datagen {
+            inherit server
+            name "Data Generation"
+            vmArg "-Dfabric-api.datagen"
+            vmArg "-Dfabric-api.datagen.output-dir=${file("src/main/generated")}"
+            vmArg "-Dfabric-api.datagen.modid=soulscorch"
+
+            runDir "build/datagen"
+        }
+
+        datagenClient {
+            inherit client
+            name "Data Generation Client"
+            vmArg "-Dfabric-api.datagen"
+            vmArg "-Dfabric-api.datagen.output-dir=${file("src/main/generated")}"
+            vmArg "-Dfabric-api.datagen.modid=soulscorch"
+
+            runDir "build/datagen"
+        }
+    }
+}
+
+sourceSets {
+    main {
+        resources {
+            srcDirs += {
+                'src/main/generated'
+            }
+        }
+    }
+}
+
 // configure the maven publication
 publishing {
 	publications {
@@ -94,4 +126,15 @@ publishing {
 		// The repositories here will be used for publishing your artifact, not for
 		// retrieving dependencies.
 	}
+
+    task listDatagenTasks {
+        doLast {
+            println "Available tasks:"
+            tasks.each {task ->
+                if(Task.name.contains('datagen') || task.name.contains('Data')) {
+                    println "  - ${task.name}"
+                }
+            }
+        }
+    }
 }
